--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
        <div class="social_container">
         <a style="text-decoration: none;" href="https://instagram.com" target="_blank">
         <div class="social">
-         <img style="margin-right:6px;" src="./Instagram.svg" alt ="Instagram" width="28" height="28">
+         <img style="margin-right:8px;" src="./Instagram.svg" alt ="instagram" width="30" height="30">
             Instagram
           
       </div></a>
       <a style="text-decoration: none;" href="https://Facebook.com" target="_blank">
-      <div class="social"><img style="margin-right:6px;" src="./Facebook.svg" alt="Facebook" width="30" height="30">
+      <div class="social"><img style="margin-right:8px;" src="./facebook.svg" alt="Facebook" width="30" height="30">
         Facebook</div></a>
         <a style="text-decoration: none;" href="https://linkedin.com" target="_blank">
        <div class="social">
