--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <div class="social_container">
         <a style="text-decoration: none;" href="https://instagram.com" target="_blank">
         <div class="social">
-         <img style="margin-right:8px;" src="./Instagram.svg" alt ="instagram" width="30" height="30">
+         <img style="margin-right:8px;" src="./instagram.svg" alt ="instagram" width="30" height="30">
             Instagram
           
       </div></a>
