--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
       <h2 class="titulo">Mis redes sociales</h2>
        <div class="social_container">
-        <a style="text-decoration: none;" href="https://instagram.com" target="_blank">
+        <a style="text-decoration: none;" href="https://www.instagram.com/sebasqwert4/" target="_blank">
         <div class="social">
          <img style="margin-right:8px;" src="./insta.svg" alt ="instagram" width="30" height="30">
             Instagram
           
       </div></a>
-      <a style="text-decoration: none;" href="https://Facebook.com" target="_blank">
+      <a style="text-decoration: none;" href="https://www.facebook.com/profile.php?id=100015678362844" target="_blank">
       <div class="social"><img style="margin-right:8px;" src="./facebook.svg" alt="Facebook" width="30" height="30">
         Facebook</div></a>
-        <a style="text-decoration: none;" href="https://linkedin.com" target="_blank">
+        <a style="text-decoration: none;" href="https://www.linkedin.com/in/sebasqwert-nocua-44b90031b/" target="_blank">
        <div class="social">
         <img style="margin-right:8px;" src="./linkedin.svg" alt="linkedin" width="30" height="30">
                 Linkedin</div></a>
